tests/errors/syn.missing-lbrace.struct-def.or
main :: () -> void {
    array_t :: struct 
        x := 0;
    };
};
